updated class structure

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="/app.js" type="text/babel"></script>
+    <script src="/class-life-cycles.js" type="text/babel"></script>
   </body>
 </html>
